--- a/docs/contents/development/architecture/integrated-server-architecture.mdx
+++ b/docs/contents/development/architecture/integrated-server-architecture.mdx
@@ -53,20 +53,21 @@ graph TB
 The core integration function that creates a unified FastAPI app:
 
 ```python
-from slack_mcp.integrated_server import create_integrated_app
+from slack_mcp.integrate.integrated_server import create_integrated_app
+
 
 def create_integrated_app(
-    token: Optional[str] = None,
-    mcp_transport: str = "sse",
-    mcp_mount_path: Optional[str] = "/mcp",
-    retry: int = 3,
+        token: Optional[str] = None,
+        mcp_transport: str = "sse",
+        mcp_mount_path: Optional[str] = "/mcp",
+        retry: int = 3,
 ) -> FastAPI:
     # Create webhook server as base
     app = create_slack_app()
-    
+
     # Initialize shared Slack client
     initialize_slack_client(token, retry=retry)
-    
+
     # Mount MCP server based on transport type
     if mcp_transport == "sse":
         mcp_app = _server_instance.sse_app(mount_path=mcp_mount_path)
@@ -76,7 +77,7 @@ def create_integrated_app(
         # Merge routes for HTTP streaming
         for route in mcp_app.routes:
             app.routes.append(route)
-    
+
     return app
 ```
 
