♻️ Rename the module as *server* from *app* to be more clear and readable.

--- a/docs/contents/development/architecture/integrated-server-architecture.mdx
+++ b/docs/contents/development/architecture/integrated-server-architecture.mdx
@@ -53,7 +53,7 @@ graph TB
 The core integration function that creates a unified FastAPI app:
 
 ```python
-from slack_mcp.integrate.integrated_server import create_integrated_app
+from slack_mcp.integrate.server import create_integrated_app
 
 
 def create_integrated_app(
