➕ Add the new content for the new CI workflow about validating the document building process.

--- a/docs/contents/development/ci-cd/index.mdx
+++ b/docs/contents/development/ci-cd/index.mdx
@@ -51,11 +51,13 @@ Our CI/CD system is organized into focused, developer-friendly sections:
 [![Validate Slack Event Types](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml)
 [![Docker CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docker-ci.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docker-ci.yml)
 [![DockerHub README CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/dockerhub-readme-ci.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/dockerhub-readme-ci.yml)
+[![Documentation Build Check](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-build-check.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-build-check.yaml)
 [![Docs Auto-Merge](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-automerge.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docs-automerge.yml)
 
 - **Slack Event Types Validation** - Automated validation of SlackEvent enum synchronization
 - **Docker CI** - Container building and testing workflows  
 - **DockerHub README CI** - Repository description synchronization
+- **Documentation Build Check** - Validates documentation builds on PRs and branch changes
 - **Documentation Auto-Approve & Auto-Merge** - Streamlined docs updates
 
 ### **🛠️ [Developer Guide](./developer-guide)**
