➕ Add a new page about the new instance management design for the application instances in the document.

--- a/docs/contents/development/architecture/integrated-server-architecture.mdx
+++ b/docs/contents/development/architecture/integrated-server-architecture.mdx
@@ -48,6 +48,10 @@ graph TB
 
 ## Architecture Components
 
+:::info Common Instance Management
+The Integrated Server uses the **common instance management design** shared across all server types in this project. For detailed information about factory patterns, singleton management, token handling, and testing support, see the [Common Instance Management](./instance-management-design.mdx) documentation.
+:::
+
 ### **Integrated Application Factory**
 
 The core integration function that creates a unified FastAPI app:
