--- a/docs/contents/development/architecture/mcp-server-architecture.mdx
+++ b/docs/contents/development/architecture/mcp-server-architecture.mdx
@@ -10,6 +10,10 @@ The MCP (Model Context Protocol) Server is the core component that enables AI as
 
 ## Overview
 
+:::info Common Instance Management
+The MCP Server uses the **common instance management design** shared across all server types in this project. For detailed information about factory patterns, singleton management, token handling, and testing support, see the [Common Instance Management](./instance-management-design.mdx) documentation.
+:::
+
 The MCP Server implements the Model Context Protocol specification, providing Slack integration capabilities through a set of registered tools. It supports multiple transport mechanisms and offers a flexible, extensible architecture for Slack API interactions.
 
 ```mermaid
